documentacion/obtenida/ARINC 429/driver and software/LX429-3/API/L43W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long MSGADDR;
typedef unsigned long LISTADDR;
typedef unsigned long * LPMSGADDR;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;
typedef int SCHNDX;

L43W32API VOID __stdcall L43_ListPostWr(LISTADDR listaddr,LPUSHORT header,HCARD handleval);

L43W32API VOID __stdcall L43_ListPreRd(LISTADDR listaddr,LPUSHORT header,HCARD handleval);

L43W32API VOID __stdcall L43_ListPreWr(LISTADDR listaddr,LPUSHORT header,HCARD handleval);

L43W32API INT __stdcall L43_ListStatus(LISTADDR listaddr,HCARD handleval);

L43W32API ULONG __stdcall L43_MakeLong(USHORT valh,USHORT vall);

L43W32API LPSTR __stdcall L43_MantToAscii(LPSTR buf,long mant,int exp);

L43W32API ULONG __stdcall L43_Mask(ULONG dataval,INT cntval);

L43W32API VOID __stdcall L43_MaxMant(LPULONG mant,LPINT exp);

L43W32API VOID __stdcall L43_MEMWINFillW(USHORT value,ULONG addrval,ULONG countval,INT bustype,HCARD handleval);

L43W32API USHORT __stdcall L43_MEMWINRdB(ULONG addrval,INT bustype,HCARD handleval);

L43W32API ULONG __stdcall L43_MEMWINRdL(ULONG addrval,INT bustype,HCARD handleval);

L43W32API VOID __stdcall L43_MEMWINRdsL(LPULONG valueptr,ULONG addrval,INT countval,INT bustype,HCARD handleval);

L43W32API VOID __stdcall L43_MEMWINRdsW(LPUSHORT valueptr,ULONG addrval,INT countval,INT bustype,HCARD handleval);

L43W32API USHORT __stdcall L43_MEMWINRdW(ULONG addrval,INT bustype,HCARD handleval);

L43W32API VOID __stdcall L43_MEMWINWrB(USHORT value,ULONG addrval,INT bustype,HCARD handleval);

L43W32API VOID __stdcall L43_MEMWINWrL(ULONG value,ULONG addrval,INT bustype,HCARD handleval);

L43W32API VOID __stdcall L43_MEMWINWrsL(LPULONG valueptr,ULONG addrval,INT countval,INT bustype,HCARD handleval);

L43W32API VOID __stdcall L43_MEMWINWrsW(LPUSHORT valueptr,ULONG addrval,INT countval,INT bustype,HCARD handleval);

L43W32API VOID __stdcall L43_MEMWINWrW(USHORT value,ULONG addrval,INT bustype,HCARD handleval);

L43W32API ULONG __stdcall L43_Mod(ULONG moda,ULONG modb);

L43W32API USHORT __stdcall L43_MsgActivityRd(MSGADDR msgaddr,HCARD handleval);

L43W32API VOID __stdcall L43_MsgActivityWr(USHORT value,MSGADDR msgaddr,HCARD handleval);

L43W32API USHORT __stdcall L43_MsgCheck(MSGADDR msgaddr,HCARD handleval);

L43W32API ERRVAL __stdcall L43_MsgConfig(ULONG configval,MSGADDR msgaddr,HCARD handleval);

L43W32API USHORT __stdcall L43_MsgOptRd(MSGADDR msgaddr,HCARD handleval);

L43W32API VOID __stdcall L43_MsgOptWr(USHORT msgopt,MSGADDR msgaddr,HCARD handleval);

L43W32API MSGADDR __stdcall L43_MsgReset(MSGADDR msgaddr,HCARD handleval);

L43W32API ULONG __stdcall L43_Mul(ULONG mula,ULONG mulb);

L43W32API VOID __stdcall L43_NormalMant(LPULONG mant,LPINT exp);

L43W32API USHORT __stdcall L43_PortRd(INT addrval,HCARD handleval);

L43W32API VOID __stdcall L43_PortWr(USHORT value,INT addrval,HCARD handleval);

L43W32API USHORT __stdcall L43_ProgRdW(USHORT addrval,HCARD handleval);

L43W32API VOID __stdcall L43_ProgWrW(USHORT value,USHORT addrval,HCARD handleval);

L43W32API VOID __stdcall L43_RAMFill(USHORT value,ULONG addrval,ULONG countval,HCARD handleval);

L43W32API BOOL __stdcall L43_RAMIsDPM(ULONG addrval);

L43W32API USHORT __stdcall L43_RAMRdB(ULONG addrval,HCARD handleval);

L43W32API ULONG __stdcall L43_RAMRdL(ULONG addrval,HCARD handleval);

L43W32API VOID __stdcall L43_RAMRdsL(LPULONG valueptr,ULONG addrval,INT countval,HCARD handleval);

L43W32API VOID __stdcall L43_RAMRdsW(LPUSHORT valueptr,ULONG addrval,INT countval,HCARD handleval);

L43W32API USHORT __stdcall L43_RAMRdW(ULONG addrval,HCARD handleval);

L43W32API VOID __stdcall L43_RAMWipe(HCARD handleval);

L43W32API VOID __stdcall L43_RAMWipeEx(USHORT value,HCARD handleval);

L43W32API VOID __stdcall L43_RAMWrB(USHORT value,ULONG addrval,HCARD handleval);

L43W32API VOID __stdcall L43_RAMWrL(ULONG value,ULONG addrval,HCARD handleval);

L43W32API VOID __stdcall L43_RAMWrsL(LPULONG valueptr,ULONG addrval,INT countval,HCARD handleval);

L43W32API VOID __stdcall L43_RAMWrsW(LPUSHORT valueptr,ULONG addrval,INT countval,HCARD handleval);

L43W32API VOID __stdcall L43_RAMWrW(USHORT value,ULONG addrval,HCARD handleval);

L43W32API ULONG __stdcall L43_SchedAdvance(VOID);

L43W32API SCHNDX __stdcall L43_SchedAgain(SCHNDX index,INT channum,HCARD handleval);

L43W32API SCHNDX __stdcall L43_SchedBranchEx(USHORT condition1,USHORT condition2,SCHNDX destindex,INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SchedBuildEx(INT nummsgs,LPMSGADDR msgaddr,LPINT minperiod,LPINT maxperiod,BOOL speed,INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SchedBuildExx(INT basemsgnum,INT nummsgs,LPMSGADDR msgaddr,LPINT minperiod,LPINT maxperiod,INT speed,LPVOID buf,ULONG bufsize,INT channum,HCARD handleval);

L43W32API ULONG __stdcall L43_SchedCalc(VOID);

L43W32API SCHNDX __stdcall L43_SchedCallEx(USHORT condition1,USHORT condition2,SCHNDX destindex,INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SchedCheck(LPINT minperiod,LPINT maxperiod);

L43W32API VOID __stdcall L43_SchedCheckEnd(VOID);

L43W32API VOID __stdcall L43_SchedCheckMiddle(ULONG msgnum,ULONG minlen,ULONG midlen,ULONG maxlen);

L43W32API VOID __stdcall L43_SchedCheckReal(ULONG msgnum,ULONG minlen,ULONG midlen,ULONG maxlen);

L43W32API VOID __stdcall L43_SchedCheckStart(VOID);

L43W32API ULONG __stdcall L43_SchedConflicts(VOID);

L43W32API ERRVAL __stdcall L43_SchedDivide(VOID);

L43W32API ULONG __stdcall L43_SchedFix(VOID);

L43W32API VOID __stdcall L43_SchedFixEnd(VOID);

L43W32API VOID __stdcall L43_SchedFixMiddle(ULONG conflicts);

L43W32API VOID __stdcall L43_SchedFixStart(VOID);

L43W32API VOID __stdcall L43_SchedHook(INT index,LPVOID ptr);

L43W32API ERRVAL __stdcall L43_SchedInsert(ULONG events,ULONG index,ULONG msgnum,LPMSGADDR msgaddr,ULONG gapval,INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SchedInsertEnd(ULONG events,INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SchedInsertStart(ULONG events,INT channum,HCARD handleval);

L43W32API SCHNDX __stdcall L43_SchedIntEx(USHORT condition1,USHORT condition2,USHORT tagval,INT channum,HCARD handleval);

L43W32API VOID __stdcall L43_SchedLayout(VOID);

L43W32API ULONG __stdcall L43_SchedMaxval(LPULONG array,ULONG arraycount);

L43W32API ULONG __stdcall L43_SchedMinval(LPULONG array,ULONG arraycount);

L43W32API SCHNDX __stdcall L43_SchedNop(INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SchedParse(INT basemsgnum,LPMSGADDR msgaddr,INT channum,HCARD handleval);