documentacion/obtenida/ARINC 429/driver and software/LX429-3/API/L43W32VB.BAS

Public Declare Function L43_ListPostWr Lib "L43W32.DLL" Alias "_L43_ListPostWr@12" (ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long) As Long
Public Declare Function L43_ListPreRd Lib "L43W32.DLL" Alias "_L43_ListPreRd@12" (ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long) As Long
Public Declare Function L43_ListPreWr Lib "L43W32.DLL" Alias "_L43_ListPreWr@12" (ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long) As Long
Public Declare Function L43_ListStatus Lib "L43W32.DLL" Alias "_L43_ListStatus@8" (ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function L43_MakeLong Lib "L43W32.DLL" Alias "_L43_MakeLong@8" (ByVal valh As Integer, ByVal vall As Integer) As Long
Public Declare Function L43_MantToAscii Lib "L43W32.DLL" Alias "_L43_MantToAscii@12" (ByRef buf As String, ByVal mant As Long, ByVal exp As Long) As Long
Public Declare Function L43_Mask Lib "L43W32.DLL" Alias "_L43_Mask@8" (ByVal dataval As Long, ByVal cntval As Long) As Long
Public Declare Function L43_MaxMant Lib "L43W32.DLL" Alias "_L43_MaxMant@8" (ByRef mant As Long, ByRef exp As Long) As Long
Public Declare Function L43_MEMWINFillW Lib "L43W32.DLL" Alias "_L43_MEMWINFillW@20" (ByVal value As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function L43_MEMWINRdB Lib "L43W32.DLL" Alias "_L43_MEMWINRdB@12" (ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Integer
Public Declare Function L43_MEMWINRdL Lib "L43W32.DLL" Alias "_L43_MEMWINRdL@12" (ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function L43_MEMWINRdsL Lib "L43W32.DLL" Alias "_L43_MEMWINRdsL@20" (ByRef valueptr As Long, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function L43_MEMWINRdsW Lib "L43W32.DLL" Alias "_L43_MEMWINRdsW@20" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function L43_MEMWINRdW Lib "L43W32.DLL" Alias "_L43_MEMWINRdW@12" (ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Integer
Public Declare Function L43_MEMWINWrB Lib "L43W32.DLL" Alias "_L43_MEMWINWrB@16" (ByVal value As Integer, ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function L43_MEMWINWrL Lib "L43W32.DLL" Alias "_L43_MEMWINWrL@16" (ByVal value As Long, ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function L43_MEMWINWrsL Lib "L43W32.DLL" Alias "_L43_MEMWINWrsL@20" (ByRef valueptr As Long, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function L43_MEMWINWrsW Lib "L43W32.DLL" Alias "_L43_MEMWINWrsW@20" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function L43_MEMWINWrW Lib "L43W32.DLL" Alias "_L43_MEMWINWrW@16" (ByVal value As Integer, ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function L43_Mod Lib "L43W32.DLL" Alias "_L43_Mod@8" (ByVal moda As Long, ByVal modb As Long) As Long
Public Declare Function L43_MsgActivityRd Lib "L43W32.DLL" Alias "_L43_MsgActivityRd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function L43_MsgActivityWr Lib "L43W32.DLL" Alias "_L43_MsgActivityWr@12" (ByVal value As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function L43_MsgCheck Lib "L43W32.DLL" Alias "_L43_MsgCheck@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function L43_MsgConfig Lib "L43W32.DLL" Alias "_L43_MsgConfig@12" (ByVal configval As Long, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function L43_MsgOptRd Lib "L43W32.DLL" Alias "_L43_MsgOptRd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function L43_MsgOptWr Lib "L43W32.DLL" Alias "_L43_MsgOptWr@12" (ByVal msgopt As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function L43_MsgReset Lib "L43W32.DLL" Alias "_L43_MsgReset@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function L43_Mul Lib "L43W32.DLL" Alias "_L43_Mul@8" (ByVal mula As Long, ByVal mulb As Long) As Long
Public Declare Function L43_NormalMant Lib "L43W32.DLL" Alias "_L43_NormalMant@8" (ByRef mant As Long, ByRef exp As Long) As Long
Public Declare Function L43_PortRd Lib "L43W32.DLL" Alias "_L43_PortRd@8" (ByVal addrval As Long, ByVal handleval As Long) As Integer
Public Declare Function L43_PortWr Lib "L43W32.DLL" Alias "_L43_PortWr@12" (ByVal value As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function L43_ProgRdW Lib "L43W32.DLL" Alias "_L43_ProgRdW@8" (ByVal addrval As Integer, ByVal handleval As Long) As Integer
Public Declare Function L43_ProgWrW Lib "L43W32.DLL" Alias "_L43_ProgWrW@12" (ByVal value As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function L43_RAMFill Lib "L43W32.DLL" Alias "_L43_RAMFill@16" (ByVal value As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal handleval As Long) As Long
Public Declare Function L43_RAMIsDPM Lib "L43W32.DLL" Alias "_L43_RAMIsDPM@4" (ByVal addrval As Long) As Long
Public Declare Function L43_RAMRdB Lib "L43W32.DLL" Alias "_L43_RAMRdB@8" (ByVal addrval As Long, ByVal handleval As Long) As Integer
Public Declare Function L43_RAMRdL Lib "L43W32.DLL" Alias "_L43_RAMRdL@8" (ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function L43_RAMRdsL Lib "L43W32.DLL" Alias "_L43_RAMRdsL@16" (ByRef valueptr As Long, ByVal addrval As Long, ByVal countval As Long, ByVal handleval As Long) As Long
Public Declare Function L43_RAMRdsW Lib "L43W32.DLL" Alias "_L43_RAMRdsW@16" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal handleval As Long) As Long
Public Declare Function L43_RAMRdW Lib "L43W32.DLL" Alias "_L43_RAMRdW@8" (ByVal addrval As Long, ByVal handleval As Long) As Integer
Public Declare Function L43_RAMWipe Lib "L43W32.DLL" Alias "_L43_RAMWipe@4" (ByVal handleval As Long) As Long
Public Declare Function L43_RAMWipeEx Lib "L43W32.DLL" Alias "_L43_RAMWipeEx@8" (ByVal value As Integer, ByVal handleval As Long) As Long
Public Declare Function L43_RAMWrB Lib "L43W32.DLL" Alias "_L43_RAMWrB@12" (ByVal value As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function L43_RAMWrL Lib "L43W32.DLL" Alias "_L43_RAMWrL@12" (ByVal value As Long, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function L43_RAMWrsL Lib "L43W32.DLL" Alias "_L43_RAMWrsL@16" (ByRef valueptr As Long, ByVal addrval As Long, ByVal countval As Long, ByVal handleval As Long) As Long
Public Declare Function L43_RAMWrsW Lib "L43W32.DLL" Alias "_L43_RAMWrsW@16" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal handleval As Long) As Long
Public Declare Function L43_RAMWrW Lib "L43W32.DLL" Alias "_L43_RAMWrW@12" (ByVal value As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SchedAdvance Lib "L43W32.DLL" Alias "_L43_SchedAdvance@0" () As Long
Public Declare Function L43_SchedAgain Lib "L43W32.DLL" Alias "_L43_SchedAgain@12" (ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SchedBranchEx Lib "L43W32.DLL" Alias "_L43_SchedBranchEx@20" (ByVal condition1 As Integer, ByVal condition2 As Integer, ByVal destindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SchedBuildEx Lib "L43W32.DLL" Alias "_L43_SchedBuildEx@28" (ByVal nummsgs As Long, ByRef msgaddr As Long, ByRef minperiod As Long, ByRef maxperiod As Long, ByVal speed As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SchedBuildExx Lib "L43W32.DLL" Alias "_L43_SchedBuildExx@40" (ByVal basevalmsgnum As Long, ByVal nummsgs As Long, ByRef msgaddr As Long, ByRef minperiod As Long, ByRef maxperiod As Long, ByVal speed As Long, ByRef buf As Long, ByVal bufsize As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SchedCalc Lib "L43W32.DLL" Alias "_L43_SchedCalc@0" () As Long
Public Declare Function L43_SchedCallEx Lib "L43W32.DLL" Alias "_L43_SchedCallEx@20" (ByVal condition1 As Integer, ByVal condition2 As Integer, ByVal destindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SchedCheck Lib "L43W32.DLL" Alias "_L43_SchedCheck@8" (ByRef minperiod As Long, ByRef maxperiod As Long) As Long
Public Declare Function L43_SchedCheckEnd Lib "L43W32.DLL" Alias "_L43_SchedCheckEnd@0" () As Long
Public Declare Function L43_SchedCheckMiddle Lib "L43W32.DLL" Alias "_L43_SchedCheckMiddle@16" (ByVal msgnum As Long, ByVal minlen As Long, ByVal midlen As Long, ByVal maxlen As Long) As Long
Public Declare Function L43_SchedCheckReal Lib "L43W32.DLL" Alias "_L43_SchedCheckReal@16" (ByVal msgnum As Long, ByVal minlen As Long, ByVal midlen As Long, ByVal maxlen As Long) As Long
Public Declare Function L43_SchedCheckStart Lib "L43W32.DLL" Alias "_L43_SchedCheckStart@0" () As Long
Public Declare Function L43_SchedConflicts Lib "L43W32.DLL" Alias "_L43_SchedConflicts@0" () As Long
Public Declare Function L43_SchedDivide Lib "L43W32.DLL" Alias "_L43_SchedDivide@0" () As Long
Public Declare Function L43_SchedFix Lib "L43W32.DLL" Alias "_L43_SchedFix@0" () As Long
Public Declare Function L43_SchedFixEnd Lib "L43W32.DLL" Alias "_L43_SchedFixEnd@0" () As Long
Public Declare Function L43_SchedFixMiddle Lib "L43W32.DLL" Alias "_L43_SchedFixMiddle@4" (ByVal conflicts As Long) As Long
Public Declare Function L43_SchedFixStart Lib "L43W32.DLL" Alias "_L43_SchedFixStart@0" () As Long
Public Declare Function L43_SchedHook Lib "L43W32.DLL" Alias "_L43_SchedHook@8" (ByVal index As Long, ByRef ptr As Long) As Long
Public Declare Function L43_SchedInsert Lib "L43W32.DLL" Alias "_L43_SchedInsert@28" (ByVal eventvals As Long, ByVal index As Long, ByVal msgnum As Long, ByRef msgaddr As Long, ByVal gapval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SchedInsertEnd Lib "L43W32.DLL" Alias "_L43_SchedInsertEnd@12" (ByVal eventvals As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SchedInsertStart Lib "L43W32.DLL" Alias "_L43_SchedInsertStart@12" (ByVal eventvals As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SchedIntEx Lib "L43W32.DLL" Alias "_L43_SchedIntEx@20" (ByVal condition1 As Integer, ByVal condition2 As Integer, ByVal tagval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SchedLayout Lib "L43W32.DLL" Alias "_L43_SchedLayout@0" () As Long
Public Declare Function L43_SchedMaxval Lib "L43W32.DLL" Alias "_L43_SchedMaxval@8" (ByRef arrayval As Long, ByVal arrayvalcount As Long) As Long
Public Declare Function L43_SchedMinval Lib "L43W32.DLL" Alias "_L43_SchedMinval@8" (ByRef arrayval As Long, ByVal arrayvalcount As Long) As Long
Public Declare Function L43_SchedNop Lib "L43W32.DLL" Alias "_L43_SchedNop@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SchedParse Lib "L43W32.DLL" Alias "_L43_SchedParse@16" (ByVal basevalmsgnum As Long, ByRef msgaddr As Long, ByVal channum As Long, ByVal handleval As Long) As Long
